[package]
name = "library"
version = "0.1.0"
authors = ["resolritter <joao.paulo.silvasouza@hotmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.4"

async-std = { version = "1.6", features = ["attributes", "unstable"] }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-async-std", "postgres" ]}
tide = "0.13"
bastion = "0.4"
crossbeam-channel = "0.5"

strum = "0.19"
strum_macros = "0.19"
