[package]
name = "library"
version = "0.1.0"
authors = ["resolritter <joao.paulo.silvasouza@hotmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2.1"
once_cell = "1.4"
flexi_logger = "0.16"
log = "0.4"
clap = "3.0.0-beta.2"

sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-async-std", "postgres", "any", "migrate"]}
refinery = { version = "0.4", features = ["postgres"]}
refinery-core = { version = "0.4", features = ["postgres"]}

async-std = { version = "1.6", features = ["attributes", "unstable"] }
tide = "0.13"
bastion = "0.4"
crossbeam-channel = "0.5"
parking_lot = "0.11"

strum = "0.19"
strum_macros = "0.19"
endpoint_actor = { path = "../endpoint_actor" }
actor_response_handler = { path = "../actor_response_handler" }
actor_msg_resources = { path = "../actor_msg_resources" }
entities = { path = "../entities" }

[dev-dependencies]
surf = "2.0"
stdext = "0.2"
test_utils = { path = "../test_utils" }
insta = "1.1"
tempdir = "0.3"
