[package]
name = "respond_with_actor"
version = "0.1.0"
authors = ["resolritter <resolritter@users.noreply.github.com>"]
edition = "2018"

[dependencies]
syn = { version = "1.0.44", features = ["full", "parsing", "extra-traits", "visit"] }
proc-macro2 = "1.0.24"
quote = "1.0.7"

[lib]
proc-macro = true
path = "lib.rs"
